Upgrade MCreator to 2024.3