@@ -1,18 +1,16 @@
 package net.mcreator.kraftmine.procedures;
 
-import net.minecraftforge.fml.common.Mod;
-import net.minecraftforge.eventbus.api.SubscribeEvent;
-import net.minecraftforge.eventbus.api.Event;
-import net.minecraftforge.event.entity.player.PlayerWakeUpEvent;
+import net.neoforged.neoforge.event.entity.player.PlayerWakeUpEvent;
+import net.neoforged.fml.common.EventBusSubscriber;
+import net.neoforged.bus.api.SubscribeEvent;
+import net.neoforged.bus.api.Event;
 
 import net.minecraft.world.phys.Vec3;
 import net.minecraft.world.phys.Vec2;
 import net.minecraft.world.phys.AABB;
 import net.minecraft.world.level.LevelAccessor;
-import net.minecraft.world.level.Level;
 import net.minecraft.world.entity.npc.Villager;
 import net.minecraft.world.entity.MobSpawnType;
-import net.minecraft.world.entity.Mob;
 import net.minecraft.world.entity.LivingEntity;
 import net.minecraft.world.entity.LightningBolt;
 import net.minecraft.world.entity.ExperienceOrb;
@@ -29,20 +27,18 @@ import net.minecraft.commands.CommandSource;
 
 import net.mcreator.kraftmine.network.KraftmineModVariables;
 import net.mcreator.kraftmine.init.KraftmineModEntities;
-import net.mcreator.kraftmine.entity.GiantAIEntity;
 import net.mcreator.kraftmine.KraftmineMod;
 
 import javax.annotation.Nullable;
 
-import java.util.stream.Collectors;
 import java.util.List;
 import java.util.Comparator;
 
-@Mod.EventBusSubscriber
+@EventBusSubscriber
 public class GiantRumblingProcedure {
 	@SubscribeEvent
 	public static void onEntityEndSleep(PlayerWakeUpEvent event) {
-		execute(event, event.getEntity().level, event.getEntity().getX(), event.getEntity().getY(), event.getEntity().getZ(), event.getEntity());
+		execute(event, event.getEntity().level(), event.getEntity().getX(), event.getEntity().getY(), event.getEntity().getZ(), event.getEntity());
 	}
 
 	public static void execute(LevelAccessor world, double x, double y, double z, Entity entity) {
@@ -70,69 +66,64 @@ public class GiantRumblingProcedure {
 							"bossbar set giant:bossbar1 color green");
 				if (world instanceof ServerLevel _level) {
 					LightningBolt entityToSpawn = EntityType.LIGHTNING_BOLT.create(_level);
-					entityToSpawn.moveTo(Vec3.atBottomCenterOf(new BlockPos(x, y, z + 100)));
+					entityToSpawn.moveTo(Vec3.atBottomCenterOf(BlockPos.containing(x, y, z + 100)));
 					entityToSpawn.setVisualOnly(true);
 					_level.addFreshEntity(entityToSpawn);
 				}
-				for (int index0 = 0; index0 < (int) (10); index0++) {
+				for (int index0 = 0; index0 < 10; index0++) {
 					if (world instanceof ServerLevel _level) {
-						Entity entityToSpawn = new GiantAIEntity(KraftmineModEntities.GIANT_AI.get(), _level);
-						entityToSpawn.moveTo(x, y, (z + 100), world.getRandom().nextFloat() * 360F, 0);
-						if (entityToSpawn instanceof Mob _mobToSpawn)
-							_mobToSpawn.finalizeSpawn(_level, world.getCurrentDifficultyAt(entityToSpawn.blockPosition()), MobSpawnType.MOB_SUMMONED, null, null);
-						world.addFreshEntity(entityToSpawn);
+						Entity entityToSpawn = KraftmineModEntities.GIANT_AI.get().spawn(_level, BlockPos.containing(x, y, z + 100), MobSpawnType.MOB_SUMMONED);
+						if (entityToSpawn != null) {
+							entityToSpawn.setYRot(world.getRandom().nextFloat() * 360F);
+						}
 					}
 				}
 				if (world instanceof ServerLevel _level) {
 					LightningBolt entityToSpawn = EntityType.LIGHTNING_BOLT.create(_level);
-					entityToSpawn.moveTo(Vec3.atBottomCenterOf(new BlockPos(x + 100, y, z)));
+					entityToSpawn.moveTo(Vec3.atBottomCenterOf(BlockPos.containing(x + 100, y, z)));
 					entityToSpawn.setVisualOnly(true);
 					_level.addFreshEntity(entityToSpawn);
 				}
-				for (int index1 = 0; index1 < (int) (10); index1++) {
+				for (int index1 = 0; index1 < 10; index1++) {
 					if (world instanceof ServerLevel _level) {
-						Entity entityToSpawn = new GiantAIEntity(KraftmineModEntities.GIANT_AI.get(), _level);
-						entityToSpawn.moveTo((x + 100), y, z, world.getRandom().nextFloat() * 360F, 0);
-						if (entityToSpawn instanceof Mob _mobToSpawn)
-							_mobToSpawn.finalizeSpawn(_level, world.getCurrentDifficultyAt(entityToSpawn.blockPosition()), MobSpawnType.MOB_SUMMONED, null, null);
-						world.addFreshEntity(entityToSpawn);
+						Entity entityToSpawn = KraftmineModEntities.GIANT_AI.get().spawn(_level, BlockPos.containing(x + 100, y, z), MobSpawnType.MOB_SUMMONED);
+						if (entityToSpawn != null) {
+							entityToSpawn.setYRot(world.getRandom().nextFloat() * 360F);
+						}
 					}
 				}
 				if (world instanceof ServerLevel _level) {
 					LightningBolt entityToSpawn = EntityType.LIGHTNING_BOLT.create(_level);
-					entityToSpawn.moveTo(Vec3.atBottomCenterOf(new BlockPos(x - 100, y, z)));
+					entityToSpawn.moveTo(Vec3.atBottomCenterOf(BlockPos.containing(x - 100, y, z)));
 					entityToSpawn.setVisualOnly(true);
 					_level.addFreshEntity(entityToSpawn);
 				}
-				for (int index2 = 0; index2 < (int) (10); index2++) {
+				for (int index2 = 0; index2 < 10; index2++) {
 					if (world instanceof ServerLevel _level) {
-						Entity entityToSpawn = new GiantAIEntity(KraftmineModEntities.GIANT_AI.get(), _level);
-						entityToSpawn.moveTo((x - 100), y, z, world.getRandom().nextFloat() * 360F, 0);
-						if (entityToSpawn instanceof Mob _mobToSpawn)
-							_mobToSpawn.finalizeSpawn(_level, world.getCurrentDifficultyAt(entityToSpawn.blockPosition()), MobSpawnType.MOB_SUMMONED, null, null);
-						world.addFreshEntity(entityToSpawn);
+						Entity entityToSpawn = KraftmineModEntities.GIANT_AI.get().spawn(_level, BlockPos.containing(x - 100, y, z), MobSpawnType.MOB_SUMMONED);
+						if (entityToSpawn != null) {
+							entityToSpawn.setYRot(world.getRandom().nextFloat() * 360F);
+						}
 					}
 				}
 				if (world instanceof ServerLevel _level) {
 					LightningBolt entityToSpawn = EntityType.LIGHTNING_BOLT.create(_level);
-					entityToSpawn.moveTo(Vec3.atBottomCenterOf(new BlockPos(x, y, z - 100)));
+					entityToSpawn.moveTo(Vec3.atBottomCenterOf(BlockPos.containing(x, y, z - 100)));
 					entityToSpawn.setVisualOnly(true);
 					_level.addFreshEntity(entityToSpawn);
 				}
-				for (int index3 = 0; index3 < (int) (10); index3++) {
+				for (int index3 = 0; index3 < 10; index3++) {
 					if (world instanceof ServerLevel _level) {
-						Entity entityToSpawn = new GiantAIEntity(KraftmineModEntities.GIANT_AI.get(), _level);
-						entityToSpawn.moveTo(x, y, (z - 100), world.getRandom().nextFloat() * 360F, 0);
-						if (entityToSpawn instanceof Mob _mobToSpawn)
-							_mobToSpawn.finalizeSpawn(_level, world.getCurrentDifficultyAt(entityToSpawn.blockPosition()), MobSpawnType.MOB_SUMMONED, null, null);
-						world.addFreshEntity(entityToSpawn);
+						Entity entityToSpawn = KraftmineModEntities.GIANT_AI.get().spawn(_level, BlockPos.containing(x, y, z - 100), MobSpawnType.MOB_SUMMONED);
+						if (entityToSpawn != null) {
+							entityToSpawn.setYRot(world.getRandom().nextFloat() * 360F);
+						}
 					}
 				}
 			});
 			{
 				final Vec3 _center = new Vec3(x, y, z);
-				List<Entity> _entfound = world.getEntitiesOfClass(Entity.class, new AABB(_center, _center).inflate(1000 / 2d), e -> true).stream().sorted(Comparator.comparingDouble(_entcnd -> _entcnd.distanceToSqr(_center)))
-						.collect(Collectors.toList());
+				List<Entity> _entfound = world.getEntitiesOfClass(Entity.class, new AABB(_center, _center).inflate(1000 / 2d), e -> true).stream().sorted(Comparator.comparingDouble(_entcnd -> _entcnd.distanceToSqr(_center))).toList();
 				for (Entity entityiterator : _entfound) {
 					giantcount = giantcount + 1;
 				}
@@ -162,10 +153,10 @@ public class GiantRumblingProcedure {
 						_level.getServer().getCommands().performPrefixedCommand(new CommandSourceStack(CommandSource.NULL, new Vec3(x, y, z), Vec2.ZERO, _level, 4, "", Component.literal(""), _level.getServer(), null).withSuppressedOutput(),
 								"bossbar remove giant:bossbar1");
 				});
-				if (world instanceof Level _level && !_level.isClientSide())
+				if (world instanceof ServerLevel _level)
 					_level.addFreshEntity(new ExperienceOrb(_level, x, y, z, 200));
 				if (!world.getEntitiesOfClass(Villager.class, AABB.ofSize(new Vec3(x, y, z), 200, 200, 200), e -> true).isEmpty()) {
-					if (entity instanceof LivingEntity _entity)
+					if (entity instanceof LivingEntity _entity && !_entity.level().isClientSide())
 						_entity.addEffect(new MobEffectInstance(MobEffects.HERO_OF_THE_VILLAGE, 32000, 1));
 				}
 			}
