@@ -3,76 +3,67 @@ package net.mcreator.kraftmine.procedures;
 import net.minecraft.world.phys.Vec3;
 import net.minecraft.world.phys.AABB;
 import net.minecraft.world.level.LevelAccessor;
-import net.minecraft.world.entity.animal.Chicken;
 import net.minecraft.world.entity.MobSpawnType;
-import net.minecraft.world.entity.Mob;
 import net.minecraft.world.entity.LivingEntity;
 import net.minecraft.world.entity.EntityType;
 import net.minecraft.world.entity.Entity;
 import net.minecraft.world.effect.MobEffects;
 import net.minecraft.world.effect.MobEffectInstance;
 import net.minecraft.server.level.ServerLevel;
+import net.minecraft.core.BlockPos;
 
 import net.mcreator.kraftmine.init.KraftmineModEntities;
-import net.mcreator.kraftmine.entity.GooseEntity;
 
-import java.util.stream.Collectors;
 import java.util.List;
 import java.util.Comparator;
 
 public class GooseItIsStruckByLightningProcedure {
 	public static void execute(LevelAccessor world, double x, double y, double z) {
 		if (world instanceof ServerLevel _level) {
-			Entity entityToSpawn = new GooseEntity(KraftmineModEntities.GOOSE.get(), _level);
-			entityToSpawn.moveTo(x, y, z, world.getRandom().nextFloat() * 360F, 0);
-			if (entityToSpawn instanceof Mob _mobToSpawn)
-				_mobToSpawn.finalizeSpawn(_level, world.getCurrentDifficultyAt(entityToSpawn.blockPosition()), MobSpawnType.MOB_SUMMONED, null, null);
-			world.addFreshEntity(entityToSpawn);
+			Entity entityToSpawn = KraftmineModEntities.GOOSE.get().spawn(_level, BlockPos.containing(x, y, z), MobSpawnType.MOB_SUMMONED);
+			if (entityToSpawn != null) {
+				entityToSpawn.setYRot(world.getRandom().nextFloat() * 360F);
+			}
 		}
 		if (world instanceof ServerLevel _level) {
-			Entity entityToSpawn = new GooseEntity(KraftmineModEntities.GOOSE.get(), _level);
-			entityToSpawn.moveTo(x, y, z, world.getRandom().nextFloat() * 360F, 0);
-			if (entityToSpawn instanceof Mob _mobToSpawn)
-				_mobToSpawn.finalizeSpawn(_level, world.getCurrentDifficultyAt(entityToSpawn.blockPosition()), MobSpawnType.MOB_SUMMONED, null, null);
-			world.addFreshEntity(entityToSpawn);
+			Entity entityToSpawn = KraftmineModEntities.GOOSE.get().spawn(_level, BlockPos.containing(x, y, z), MobSpawnType.MOB_SUMMONED);
+			if (entityToSpawn != null) {
+				entityToSpawn.setYRot(world.getRandom().nextFloat() * 360F);
+			}
 		}
 		if (world instanceof ServerLevel _level) {
-			Entity entityToSpawn = new GooseEntity(KraftmineModEntities.GOOSE.get(), _level);
-			entityToSpawn.moveTo(x, y, z, world.getRandom().nextFloat() * 360F, 0);
-			if (entityToSpawn instanceof Mob _mobToSpawn)
-				_mobToSpawn.finalizeSpawn(_level, world.getCurrentDifficultyAt(entityToSpawn.blockPosition()), MobSpawnType.MOB_SUMMONED, null, null);
-			world.addFreshEntity(entityToSpawn);
+			Entity entityToSpawn = KraftmineModEntities.GOOSE.get().spawn(_level, BlockPos.containing(x, y, z), MobSpawnType.MOB_SUMMONED);
+			if (entityToSpawn != null) {
+				entityToSpawn.setYRot(world.getRandom().nextFloat() * 360F);
+			}
 		}
 		if (world instanceof ServerLevel _level) {
-			Entity entityToSpawn = new GooseEntity(KraftmineModEntities.GOOSE.get(), _level);
-			entityToSpawn.moveTo(x, y, z, world.getRandom().nextFloat() * 360F, 0);
-			if (entityToSpawn instanceof Mob _mobToSpawn)
-				_mobToSpawn.finalizeSpawn(_level, world.getCurrentDifficultyAt(entityToSpawn.blockPosition()), MobSpawnType.MOB_SUMMONED, null, null);
-			world.addFreshEntity(entityToSpawn);
+			Entity entityToSpawn = KraftmineModEntities.GOOSE.get().spawn(_level, BlockPos.containing(x, y, z), MobSpawnType.MOB_SUMMONED);
+			if (entityToSpawn != null) {
+				entityToSpawn.setYRot(world.getRandom().nextFloat() * 360F);
+			}
 		}
 		if (world instanceof ServerLevel _level) {
-			Entity entityToSpawn = new GooseEntity(KraftmineModEntities.GOOSE.get(), _level);
-			entityToSpawn.moveTo(x, y, z, world.getRandom().nextFloat() * 360F, 0);
-			if (entityToSpawn instanceof Mob _mobToSpawn)
-				_mobToSpawn.finalizeSpawn(_level, world.getCurrentDifficultyAt(entityToSpawn.blockPosition()), MobSpawnType.MOB_SUMMONED, null, null);
-			world.addFreshEntity(entityToSpawn);
+			Entity entityToSpawn = KraftmineModEntities.GOOSE.get().spawn(_level, BlockPos.containing(x, y, z), MobSpawnType.MOB_SUMMONED);
+			if (entityToSpawn != null) {
+				entityToSpawn.setYRot(world.getRandom().nextFloat() * 360F);
+			}
 		}
 		if (world instanceof ServerLevel _level) {
-			Entity entityToSpawn = new Chicken(EntityType.CHICKEN, _level);
-			entityToSpawn.moveTo(x, y, z, world.getRandom().nextFloat() * 360F, 0);
-			if (entityToSpawn instanceof Mob _mobToSpawn)
-				_mobToSpawn.finalizeSpawn(_level, world.getCurrentDifficultyAt(entityToSpawn.blockPosition()), MobSpawnType.MOB_SUMMONED, null, null);
-			world.addFreshEntity(entityToSpawn);
+			Entity entityToSpawn = EntityType.CHICKEN.spawn(_level, BlockPos.containing(x, y, z), MobSpawnType.MOB_SUMMONED);
+			if (entityToSpawn != null) {
+				entityToSpawn.setYRot(world.getRandom().nextFloat() * 360F);
+			}
 		}
 		{
 			final Vec3 _center = new Vec3(x, y, z);
-			List<Entity> _entfound = world.getEntitiesOfClass(Entity.class, new AABB(_center, _center).inflate(4 / 2d), e -> true).stream().sorted(Comparator.comparingDouble(_entcnd -> _entcnd.distanceToSqr(_center))).collect(Collectors.toList());
+			List<Entity> _entfound = world.getEntitiesOfClass(Entity.class, new AABB(_center, _center).inflate(4 / 2d), e -> true).stream().sorted(Comparator.comparingDouble(_entcnd -> _entcnd.distanceToSqr(_center))).toList();
 			for (Entity entityiterator : _entfound) {
-				if (entityiterator instanceof LivingEntity _entity)
+				if (entityiterator instanceof LivingEntity _entity && !_entity.level().isClientSide())
 					_entity.addEffect(new MobEffectInstance(MobEffects.DAMAGE_BOOST, 500, 1));
-				if (entityiterator instanceof LivingEntity _entity)
+				if (entityiterator instanceof LivingEntity _entity && !_entity.level().isClientSide())
 					_entity.addEffect(new MobEffectInstance(MobEffects.DAMAGE_RESISTANCE, 500, 1));
-				if (entityiterator instanceof LivingEntity _entity)
+				if (entityiterator instanceof LivingEntity _entity && !_entity.level().isClientSide())
 					_entity.addEffect(new MobEffectInstance(MobEffects.INVISIBILITY, 60, 1));
 			}
 		}
