@@ -10,7 +10,6 @@ import net.minecraft.world.effect.MobEffects;
 import net.minecraft.world.effect.MobEffectInstance;
 import net.minecraft.core.BlockPos;
 
-import java.util.stream.Collectors;
 import java.util.List;
 import java.util.Comparator;
 
@@ -23,12 +22,11 @@ public class GravityDisruptorProcedureProcedure {
 			Gravityoff = true;
 			{
 				final Vec3 _center = new Vec3(x, y, z);
-				List<Entity> _entfound = world.getEntitiesOfClass(Entity.class, new AABB(_center, _center).inflate(5 / 2d), e -> true).stream().sorted(Comparator.comparingDouble(_entcnd -> _entcnd.distanceToSqr(_center)))
-						.collect(Collectors.toList());
+				List<Entity> _entfound = world.getEntitiesOfClass(Entity.class, new AABB(_center, _center).inflate(5 / 2d), e -> true).stream().sorted(Comparator.comparingDouble(_entcnd -> _entcnd.distanceToSqr(_center))).toList();
 				for (Entity entityiterator : _entfound) {
-					if (!(entityiterator == entity) && !((world.getBlockState(new BlockPos(entity.getX(), entityiterator.getY() - 1, entity.getZ()))).getBlock() == blockstate.getBlock())) {
-						if (entityiterator instanceof LivingEntity _entity)
-							_entity.addEffect(new MobEffectInstance(MobEffects.LEVITATION, 60, 5, (false), (false)));
+					if (!(entityiterator == entity) && !((world.getBlockState(BlockPos.containing(entity.getX(), entityiterator.getY() - 1, entity.getZ()))).getBlock() == blockstate.getBlock())) {
+						if (entityiterator instanceof LivingEntity _entity && !_entity.level().isClientSide())
+							_entity.addEffect(new MobEffectInstance(MobEffects.LEVITATION, 60, 5, false, false));
 					}
 				}
 			}
